# emulators

./: .gitignore  CMakeLists.txt  README.md
chip8/: CMakeLists.txt
chip8/include/: SDLPlatfrom.h  chip8.h
chip8/src/: chip8.cpp  main.cpp
