cmake_minimum_required(VERSION 3.14)
project(Emulators)

set(SDL3_DISABLE_INSTALL ON CACHE BOOL "" FORCE)
set(SDL3_DISABLE_SHARED ON CACHE BOOL "" FORCE)

set(SDL3_USE_X11 ON CACHE BOOL "" FORCE)
set(SDL3_USE_WAYLAND ON CACHE BOOL "" FORCE)

set(SDL3_DISABLE_PULSEAUDIO ON CACHE BOOL "" FORCE)
set(SDL3_DISABLE_PIPEWIRE ON CACHE BOOL "" FORCE)

add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)

add_subdirectory(chip8)